faq section small fix

--- a/src/scss/_accordion.scss
+++ b/src/scss/_accordion.scss
@@ -42,6 +42,7 @@
   display: none;
   padding: 1em 2em;
   font-size: 1.6rem;
+  text-align-last: left;
 }
 
 .active-accordion {
